# OSI

./: NOTICE  ROADMAP.md
cla/: CLA.md
converters/: README.md  index.md
converters/gooddata/: README.md  pyproject.toml
converters/gooddata/src/gooddata_osi/: __init__.py  gooddata_to_osi.py  models.py  osi_to_gooddata.py
converters/gooddata/tests/: conftest.py  test_models.py  test_osi_to_gooddata.py  test_roundtrip.py
converters/gooddata/tests/fixtures/: gooddata_tpcds.json  osi_tpcds.yaml
converters/salesforce/: README.md  pom.xml
converters/salesforce/src/main/java/org/osi/app/: OsiSalesforceConverter.java
converters/salesforce/src/main/resources/: mappings.yaml  osi-salesforce-converter-config.yaml
converters/salesforce/src/test/java/org/osi/: OsiToSalesforceConverterTest.java  SalesforceToOsiConverterTest.java
converters/salesforce/src/test/resources/examples/: osiToSalesforce.yaml  salesforceToOsi.json
converters/snowflake/: README.md  example_converted_tpcds_semantic_model.yaml  osi_to_snowflake_yaml_converter.py
converters/snowflake/src/: osi_to_snowflake_yaml_converter.py
converters/snowflake/tests/: test_osi_to_snowflake_yaml_converter.py
convertors/gooddata/: pyproject.toml
convertors/gooddata/src/gooddata_osi/: __init__.py  gooddata_to_osi.py  models.py  osi_to_gooddata.py
convertors/gooddata/tests/: test_gooddata_to_osi.py
convertors/gooddata/tests/fixtures/: gooddata_tpcds.json
core-spec/: osi-schema.json  spec.md  spec.yaml
docs/: index.md
validation/: validate.py
(+27 files in other folders)
